[gd_scene load_steps=7 format=3 uid="uid://d32x43u47sd5w"]

[ext_resource type="AudioStream" uid="uid://qqpxtamwd4do" path="res://Assets/Sound/Sound effects/Footsteps/dirt footsteps.mp3" id="1"]
[ext_resource type="Script" path="res://World/Player/PlayerInMenu/PlayerMenuState.gd" id="1_ru3io"]
[ext_resource type="Texture2D" uid="uid://cng2kjrnmej2s" path="res://Characters/Human/male/IDLE/body/down/body.png" id="3"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(17.869, 29.369)

[sub_resource type="Animation" id="2"]
resource_name = "loop"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Arms:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Accessory:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HeadAtr:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Pants:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Shirts:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Shoes:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2y15u"]
_data = {
"loop": SubResource("2")
}

[node name="PlayerMenuState" type="CharacterBody2D"]
scale = Vector2(4, 4)
script = ExtResource("1_ru3io")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.142857, 2.14286)
shape = SubResource("1")

[node name="CompositeSprites" type="Node2D" parent="."]
modulate = Color(0.85, 0.85, 0.85, 1)

[node name="Body" type="Sprite2D" parent="CompositeSprites"]
texture = ExtResource("3")
hframes = 4

[node name="Arms" type="Sprite2D" parent="CompositeSprites"]
hframes = 4

[node name="Pants" type="Sprite2D" parent="CompositeSprites"]
hframes = 4

[node name="Shirts" type="Sprite2D" parent="CompositeSprites"]
hframes = 4

[node name="HeadAtr" type="Sprite2D" parent="CompositeSprites"]
hframes = 4

[node name="Accessory" type="Sprite2D" parent="CompositeSprites"]
hframes = 4

[node name="Shoes" type="Sprite2D" parent="CompositeSprites"]
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="CompositeSprites"]
libraries = {
"": SubResource("AnimationLibrary_2y15u")
}

[node name="FootstepsSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1")
volume_db = -14.0
